--- a/Decktionary/Packages/manifest.json
+++ b/Decktionary/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.20",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.inputsystem": "1.5.1",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "15.0.5",
     "com.unity.test-framework": "1.3.3",
     "com.unity.textmeshpro": "3.0.6",
