--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "openai": "^4.19.1",
+        "sharp": "^0.32.6",
         "ws": "^8.14.2"
     },
     "optionalDependencies": {
